--- a/Cargo.toml
+++ b/Cargo.toml
@@ -5,6 +5,7 @@ edition = "2024"
 
 [dependencies]
 bevy = {version = "0.18.0", features = ["bevy_dev_tools"]}
+futures-lite = "2.6.1"
 noise = "0.9.0"
 
 # Enable a small amount of optimization in the dev profile.
