--- a/Cargo.toml
+++ b/Cargo.toml
@@ -10,6 +10,7 @@ noise = "0.9.0"
 
 bevy_egui = "0.39.1" # Check for the version matching your Bevy version
 bevy_water = "0.18.1"
+rayon = "1.11.0"
 
 # Enable a small amount of optimization in the dev profile.
 [profile.dev]
