--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -2,8 +2,11 @@ name: Build Release
 
 on:
   push:
-    branches: [ "master" ]
-  workflow_dispatch: # This adds a button to let you trigger it manually
+    branches: [ "main", "master" ]
+  workflow_dispatch: 
+
+permissions:
+  contents: write 
 
 jobs:
   build:
@@ -45,13 +48,20 @@ jobs:
         shell: bash
         run: |
           mkdir MyGameRelease
-          # Copy the executable
           cp target/release/${{ matrix.executable_name }} MyGameRelease/
-          # Copy the assets folder (if it exists)
           if [ -d "assets" ]; then cp -r assets MyGameRelease/; fi
 
-      - name: Upload Game Artifact
-        uses: actions/upload-artifact@v4
+      - name: Zip the Release (Windows)
+        if: runner.os == 'Windows'
+        run: Compress-Archive -Path MyGameRelease\* -DestinationPath ${{ matrix.artifact_name }}.zip
+
+      - name: Zip the Release (Mac/Linux)
+        if: runner.os != 'Windows'
+        run: cd MyGameRelease && zip -r ../${{ matrix.artifact_name }}.zip ./* && cd ..
+
+      - name: Publish to Latest Release
+        uses: softprops/action-gh-release@v2
         with:
-          name: ${{ matrix.artifact_name }}
-          path: MyGameRelease/
+          tag_name: "latest"
+          name: "Latest Auto-Build"
+          files: ${{ matrix.artifact_name }}.zip
